# foresight

./: .gitignore  README.md  bench.py  pyproject.toml  requirements-dev.txt  requirements.txt  scale_bench.py  structure.txt
e2e/: conftest.py  test_app.py
foresight/: __init__.py  api.py  grammar.lark  models.py  parser.py  validator.py
foresight/examples/: errors.aero  example.aero
foresight/tests/: test_api.py  test_parser.py  test_validator.py
frontend/: index.html  package.json
frontend/src/: App.css  App.jsx
