[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "foresight"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "lark>=1.3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "httpx>=0.27",
    "playwright>=1.44",
    "pytest-playwright>=0.5",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["foresight/tests", "e2e"]
addopts = "--cov=foresight --cov-report=term-missing --cov-report=html:htmlcov"

[tool.coverage.run]
source = ["foresight"]
omit = ["foresight/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
